# hardware

./: .gitignore  README.md  my_clock.py  ntp-client.py  pyproject.toml  test0.py  timer.py
esp32/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32/main/: CMakeLists.txt  main.c
esp32/main/BAT_Driver/: BAT_Driver.h
esp32/main/I2C_Driver/: I2C_Driver.h
esp32/main/LCD_Driver/: ST7789.c  ST7789.h
esp32/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
esp32/main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
m5stack/: main.py
microbit/: key_status.py
microbit/docs/: DETAILS.TXT  MICROBIT.HTM
pico/LCD/: bmp_888_to_565.py
pico/LCD/c/: CMakeLists.txt  init-proj.bat  main.c
pico/LCD/c/examples/: CMakeLists.txt  LCD_1in14_test.c
pico/LCD/c/lib/Config/: DEV_Config.c
pico/LCD/c/lib/Fonts/: font21CN.c  fonts.h
pico/LCD/c/lib/GUI/: GUI_Paint.c  GUI_Paint.h
pico/LCD/c/lib/Icm20948/: icm20948.h
pico/LCD/c/lib/Infrared/: Infrared.c  Infrared.h
pico/LCD/c/lib/LCD/: LCD_1in14.c  LCD_1in14.h
pico/LCD/c/src/: CMakeLists.txt  ImageData.c  ImageData.h  ImageData_my_heart.c  lib_bootsel.c  lib_bootsel.h  lib_lcd.c  lib_lcd.h  lib_wifi.c  lib_wifi.h  lwipopts.h  main.c  picow_ntp_client.c  simple_clock.h
字模提取V2.2/: Ink Screen Font Library Tutorial - Waveshare Wiki.mhtml  zimo.ini
